# NLP

./: pyproject.toml
embeddings/: openai_ve.py
requirements/: requirements.txt
rnn/: Dataset.py  autoregressive_mlp.py  ner.py
rnn/data/: Dataset.py
